Fix clipped descenders in stream

--- a/src/sentry/static/sentry/less/stream.less
+++ b/src/sentry/static/sentry/less/stream.less
@@ -298,7 +298,7 @@
 
     h3 {
       font-size: 16px;
-      line-height: 1;
+      line-height: 1.1;
       margin: 0 0 5px;
       font-weight: 600;
       a {
@@ -307,14 +307,12 @@
     }
 
     .event-message, .event-extra {
-      line-height: 1;
+      line-height: 1.1;
     }
 
     .event-message {
-      font-weight: 100;
       font-size: 14px;
-      text-style: italic;
-      margin-bottom: 7px;
+      margin-bottom: 5px;
       color: @gray;
     }
     .event-extra {
